# SnazzCraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makerscript.sh  README.md  dependancies.txt  makerscript.sh
Launcher/: launcher.spec
Launcher/pyinstaller-env/: pyvenv.cfg
Launcher/src/: launcher.py
SnazzCraft/: Makefile  makefile
SnazzCraft/entity-data-to-load/: meshes.txt
SnazzCraft/includes/: glad.c  shader_s.h
SnazzCraft/includes/snazzcraft-engine/chunk/: chunk.hpp  chunk.inl
SnazzCraft/includes/snazzcraft-engine/core/: core-callback.hpp  core-callback.inl  core.hpp  mode.hpp  mouse-button-callback.inl  window.hpp
SnazzCraft/includes/snazzcraft-engine/entity/: entity.hpp  user.hpp
SnazzCraft/includes/snazzcraft-engine/fps-tracker/: fps-tracker.hpp
SnazzCraft/includes/snazzcraft-engine/gui/: button.hpp  gui.hpp  main-menu-gui.hpp  panel.hpp  widget-collection.hpp  world-gui.hpp
SnazzCraft/includes/snazzcraft-engine/height-map/: height-map.hpp  noise-module.hpp
SnazzCraft/includes/snazzcraft-engine/hitbox/: hitbox.hpp
SnazzCraft/includes/snazzcraft-engine/input-handler/: core-callback.hpp  data-types.h  data.hpp  event.hpp  input-handler.hpp  keys.h
SnazzCraft/includes/snazzcraft-engine/mesh/: mesh.hpp  voxel-vertice.hpp
SnazzCraft/includes/snazzcraft-engine/shader/: gui-shader.hpp  gui-shader.inl  voxel-shader.hpp  voxel-shader.inl
SnazzCraft/includes/snazzcraft-engine/texture/: atlas.hpp  solid-colors.hpp  text-texture.hpp  texture.hpp
SnazzCraft/includes/snazzcraft-engine/utilities/: byte-handling.hpp  math.hpp  math.inl  text-file-handling.hpp  thread-pool.hpp  unsigned-int-128.hpp
SnazzCraft/includes/snazzcraft-engine/vertice/: vertice-3d.hpp  voxel-vertice.hpp
SnazzCraft/includes/snazzcraft-engine/voxel/: voxel.hpp  voxel.inl
SnazzCraft/includes/snazzcraft-engine/world/: chunk.hpp  chunk.inl  voxel-collision-info.hpp  voxel-ids.h  voxel-type.hpp  voxel.hpp  voxel.inl  world.hpp  world.inl
SnazzCraft/src/: main.cpp
SnazzCraft/src/engine/core/: core.cpp  core.hpp
SnazzCraft/src/engine/entity/: entity-type.cpp  entity.cpp  entity.hpp  user.cpp
SnazzCraft/src/engine/fps-tracker/: fps-tracker.cpp  fps-tracker.hpp
SnazzCraft/src/engine/gui/: button.cpp  gui.cpp  main-menu-gui.cpp  panel.cpp  widget-collection.cpp  world-gui.cpp
SnazzCraft/src/engine/height-map/: height-map.cpp  height-map.hpp
SnazzCraft/src/engine/hitbox/: hitbox.cpp  hitbox.hpp
SnazzCraft/src/engine/input-handler/: core-callback.cpp  input-handler.cpp
SnazzCraft/textures/voxel/: atlas-coordinates.txt
SnazzCraft/worlds/: default-generated-world.txt  generate world.txt  test-world-1.txt
entity-data-to-load/: hitbox-dimensions.txt
includes/snazzcraft-engine/chunk/: chunk.hpp  chunk.inl
includes/snazzcraft-engine/core/: core-callback.hpp  core-callback.inl  core.hpp  frame-buffer-size-callback.inl  mode.hpp  mouse-button-callback.inl  window.hpp
includes/snazzcraft-engine/entity/: entity-ids.h  entity-type.hpp
includes/snazzcraft-engine/fps-tracker/: fps-tracker.hpp
includes/snazzcraft-engine/gui/: gui.hpp  main-menu-gui.hpp  world-gui.hpp
includes/snazzcraft-engine/height-map/: height-map.hpp
includes/snazzcraft-engine/input-handler/: data.hpp  input-handler.hpp
includes/snazzcraft-engine/mesh/: chunk-mesh.hpp  mesh-base.hpp  mesh-base.inl  mesh.hpp  mesh.inl  vertice.hpp
includes/snazzcraft-engine/shader/: entity-shader.hpp  entity-shader.inl  gui-shader.hpp  voxel-shader.hpp  voxel-shader.inl
includes/snazzcraft-engine/texture/: atlas.hpp  solid-colors.hpp  text-texture.hpp  text-texture.inl  texture.hpp  texture.inl
includes/snazzcraft-engine/tick-system/: tick-system.hpp
includes/snazzcraft-engine/utilities/: byte-handling.hpp  byte-handling.inl  math.hpp  math.inl  thread-pool-base.hpp  thread-pool-basic.hpp  thread-pool-recursive.hpp  thread-pool.hpp  unsigned-int-128.hpp
includes/snazzcraft-engine/voxel/: fluid-type.hpp  liquid-type.hpp  voxel-ids.h  voxel-type.hpp  voxel.hpp  voxel.inl
includes/snazzcraft-engine/world/: light-node.hpp  voxel-collision-info.inl  world.hpp  world.inl
src/: main.cpp
src/glsl-shaders/entity/: entity-fragment-shader.glsl  entity-vertex-shader.glsl
src/glsl-shaders/voxel/: voxel-fragment-shader.glsl  voxel-vertex-shader.glsl
src/snazzcraft-engine/chunk/: chunk.cpp
src/snazzcraft-engine/core/: core.cpp  mode.cpp
src/snazzcraft-engine/entity/: entity-type.cpp  user.cpp
src/snazzcraft-engine/fps-tracker/: fps-tracker.cpp
src/snazzcraft-engine/gui/: gui.cpp  world-gui.cpp
src/snazzcraft-engine/height-map/: height-map.cpp
src/snazzcraft-engine/input-handler/: data.cpp
src/snazzcraft-engine/mesh/: chunk-mesh.cpp  mesh-base.cpp  mesh.cpp  vertice.cpp
src/snazzcraft-engine/shader/: entity-shader.cpp  gui-shader.cpp  voxel-shader.cpp
src/snazzcraft-engine/texture/: atlas.cpp
src/snazzcraft-engine/tick-system/: tick-system.cpp
src/snazzcraft-engine/utilities/: text-file-handling.cpp  thread-pool-base.cpp  thread-pool.cpp  unsigned-int-128.cpp
src/snazzcraft-engine/voxel/: fluid-type.cpp  liquid-type.cpp  voxel-type.cpp  voxel.cpp
src/snazzcraft-engine/world/: entity-movement.cpp  generation.cpp  lighting.cpp  rendering.cpp  voxel-placing-and-removing.cpp  world.cpp
textures/gui/font/: a.txt  d.txt  h.txt  i.txt  n.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt
textures/voxel/: atlas-coordinates.txt
(+141 files in other folders)
